--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=SpringBoot
+spring.data.mongodb.host=localhost
+spring.data.mongodb.post=27017
+spring.data.mongodb.database=journaldb
+#spring.data.mongodb.username
+#spring.data.mongodb.password
